# jdlib

./: .gitignore  CMakeLists.txt  Makefile.old  README.md  Session.vim  makefile
doc/: Doxyfile
include/: jdlib.h
src/: CMakeLists.txt  jdbinary_search_tree.c  jdbit.c  jdhash.c  jdhashtable.c  jdlib.c  jdlist.c  jdqueue.c  jdstack.c  jdstr.c
test/: CMakeLists.txt  test.c  test_jhash.c  test_jlist.c  test_jmap.c  test_jqueue.c  test_jstack.c  test_jstrs.c
